--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="./app.js"></script>
-    <link rel="stylesheet" href="./index.css">
-    <link id="favicon" rel="icon" href="#" type="image/png" sizes="32x32">
+    <script defer src="./js/app.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <link id="favicon" rel="icon" href="./assets/jamieone.jpg" type="image/png" sizes="32x32">
     <title>jamie-portfolio</title>
 </head>
 
 <body>
+ 
+
 
 </body>
 
