--- a/index.html
+++ b/index.html
@@ -6,13 +6,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="./js/app.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css"
+        integrity="sha384-eoTu3+HydHRBIjnCVwsFyCpUDZHZSFKEJD0mc3ZqSBSb6YhZzRHeiomAUWCstIWo" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link id="favicon" rel="icon" href="./assets/jamieone.jpg" type="image/png" sizes="32x32">
     <title>jamie-portfolio</title>
 </head>
 
 <body>
- 
+    <nav>
+        <div class="brand">
+            <a href="#home">
+                <strong class="l-1">J </strong>
+                <strong class="l-2">A </strong>
+                <strong class="l-3">M </strong>
+                <strong class="l-4">I </strong>
+                <strong class="l-5">E </strong>
+            </a>
+        </div>
+        <div class="nav_item">
+            <a href="#">Home</a>
+        </div>
+        <div class="nav_item">
+            <a href="#">About Me</a>
+        </div>
+        <div class="nav_item">
+            <a href="#">Resume</a>
+        </div>
+        <div class="nav_item">
+            <a href="#">Projects</a>
+        </div>
+        <div class="nav_item">
+            <a href="#">Contact Me</a>
+        </div>
+        <button><i class="bi bi-moon-fill"></i></button>
+    </nav>
+
+    <div class="home-container">
+        <!-- left side of home page -->
+        <div class="home-child-content">
+            <h2 class="my-name">Hi,I'm Jamie Ahmed</h2>
+            <h4 class="short-description"> I'm a Junior Full Stack Developer with project
+                management skills based in New Jersy.</h4>
+            <div>
+                <button class="hire-me">Hire me</button>
+                <button class="download-resume">Download Resume!</button>
+            </div>
+        </div>
+        <!-- right side of home page -->
+        <div class="home-child-pic">
+            <img class="profile-pic" src="./assets/jamie1.jpg" alt="my-profile-pic">
+        </div>
+    </div>
+    <div class="about-container">
+        <!-- left side of about  page-->
+        <div class="about-child-pic">
+            <img class="about-image" src="./assets/jamie2.jpg" alt="about-profile-pic">
+        </div>
+        <!-- right side of about page -->
+        <div class="about-child-content">
+            <h3 class="about-me-title">About Me </h3>
+            <div class="about-me-description">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae consequatur labore ipsam cumque. Ab
+                    fuga
+                    enim eligendi porro ad quis quia obcaecati impedit corrupti officia, veniam numquam expedita
+                    molestias!
+                    Incidunt.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae consequatur labore ipsam cumque. Ab
+                    fuga
+                    enim eligendi porro ad quis quia obcaecati impedit corrupti officia, veniam numquam expedita
+                    molestias!
+                    Incidunt.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae consequatur labore ipsam cumque. Ab
+                    fuga
+                    enim eligendi porro ad quis quia obcaecati impedit corrupti officia, veniam numquam expedita
+                    molestias!
+                    Incidunt.</p>
+            </div>
+            <div class="jamie-blockquote">
+                <blockquote>
+                    jamie Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur, nisi obcaecati
+                    incidunt illo
+                    voluptate tempore, quod consequatur sint est sit itaque maiores aliquid in nulla iure explicabo vero
+                    minima doloremque!
+                    <span>" Jamie Ahmed "</span>
+                </blockquote>
+            </div>
+        </div>
+
+
+    </div>
+    <section id="myResume"></section>
+    <section id="myProjects"></section>
+    <section id="myContact"></section>
+    <section id="myFooter"></section>
+
 
 
 </body>
