--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="./js/app.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css"
         integrity="sha384-eoTu3+HydHRBIjnCVwsFyCpUDZHZSFKEJD0mc3ZqSBSb6YhZzRHeiomAUWCstIWo" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./css/style.css">
-    <link id="favicon" rel="icon" href="./assets/jamieone.jpg" type="image/png" sizes="32x32">
+    <script defer src="./js/app.js" type="module"></script>
+    <link id="favicon" rel="icon" href="./assets/images/jamieone.jpg" type="image/png" sizes="32x32">
     <title>jamie-portfolio</title>
 </head>
 
@@ -55,14 +58,14 @@
         </div>
         <!-- right side of home page -->
         <div class="home-child-pic">
-            <img class="profile-pic" src="./assets/jamie1.jpg" alt="my-profile-pic">
+            <img class="profile-pic" src="./assets/images/jamie1.jpg" alt="my-profile-pic">
         </div>
     </div>
 
     <div id="about-page" class="about-container">
         <!-- left side of about  page-->
         <div class="about-child-pic">
-            <img class="about-image" src="./assets/jamie2.jpg" alt="about-profile-pic">
+            <img class="about-image" src="./assets/images/jamie2.jpg" alt="about-profile-pic">
         </div>
         <!-- right side of about page -->
         <div class="about-child-content">
@@ -103,7 +106,7 @@
     </div>
     <div id="resume-card-container"></div>
     <!-- projects -->
-    <div id="projects-page" class="projects-container"> </div>
+    <div id="projects-page" class="projects-container"></div>
     <!-- contact page -->
     <div id="contact-page" class="contact-container">
         <div id="left-contact" class="contact-left">Contact Me</div>
