I have updated the portofolio to make it even better

--- a/index.html
+++ b/index.html
@@ -99,12 +99,23 @@
         </div>
     </div>
     <!-- resume page -->
-    <div id="resume-page" class="resume-container">
-        <div id="resume-left" class="resume-left-style"></div>
-        <div id="resume-center" class="resume-center-style"></div>
-        <div id="resume-right" class="resume-right-style"></div>
+    <div>
+        <h3 id="resume-title" class="resume-title"></h3>
+        <div id="resume-page" class="resume-container">
+            <div class="resume-title-child">
+                <h2 id="resume-education-title"></h2>
+                <img class="resume-images" src="./assets/images/eduction.jpg" alt="">
+            </div>
+            <div class="resume-title-child">
+                <h2 id="resume-skill-title"></h2>
+                <img class="resume-images" src="./assets/images/skills-logo.png" alt="">
+            </div>
+            <div class="resume-title-child">
+                <h2 id="resume-experience-title"></h2>
+                <img class="resume-images" src="./assets/images/experience-logo.jpg" alt="">
+            </div>
+        </div>
     </div>
-    <div id="resume-card-container"></div>
     <!-- projects -->
     <div id="projects-page" class="projects-container"></div>
     <!-- contact page -->
