I have updated the portofolio to make it even better

--- a/index.html
+++ b/index.html
@@ -136,12 +136,11 @@
                 <input type="text" name="user_country" placeholder="Your Country" required>
                 <br>
                 <label for="text">Message</label>
-                <textarea name="user_message" id=""></textarea>
+                <textarea name="user_message" id="" placeholder='Type your Message' required></textarea>
                 <br>
                 <input type="submit" value="Send">
             </form>
         </div>
-
         <div id="right-contact-info" class="contact-right">
             <!-- contact info staff -->
             <p class="Contact-info-title">Contact Info</p>
@@ -167,7 +166,7 @@
             <a href="https://github.com/jamieahmed">
                 <i class="bi bi-github" id="github"></i>
             </a>
-            <a href="https://github.com/jamieahmed">
+            <a href="#">
                 <i class="bi bi-messenger" id="messenger"></i>
             </a>
         </div>
