--- a/index.html
+++ b/index.html
@@ -5,46 +5,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!--Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css"
         integrity="sha384-eoTu3+HydHRBIjnCVwsFyCpUDZHZSFKEJD0mc3ZqSBSb6YhZzRHeiomAUWCstIWo" crossorigin="anonymous">
-
+    <!--Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <!-- External CSS file  -->
     <link rel="stylesheet" href="./css/style.css">
+    <!-- External JavaScript file -->
     <script defer src="./js/app.js" type="module"></script>
+    <!-- Favicon -->
     <link id="favicon" rel="icon" href="./assets/images/jamieone.jpg" type="image/png" sizes="32x32">
+    <!--App Title  -->
     <title>jamie-portfolio</title>
 </head>
 
 <body>
-    <nav id="navbar-page">
-        <div class="brand">
-            <a href="#home">
-                <strong class="l-1">J </strong>
-                <strong class="l-2">A </strong>
-                <strong class="l-3">M </strong>
-                <strong class="l-4">I </strong>
-                <strong class="l-5">E </strong>
-            </a>
+    <!-- navigation bar -->
+    <nav class="navbar navbar-expand-lg" id="nav-general-controler">
+        <div class="container-fluid">
+            <div class="brand">
+                <a class="brand-link" href="#home">
+                    <strong class="l-1">J </strong>
+                    <strong class="l-2">A </strong>
+                    <strong class="l-3">M </strong>
+                    <strong class="l-4">I </strong>
+                    <strong class="l-5">E </strong>
+                </a>
+            </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
+                <div class="nav_item">
+                    <a href="#">Home</a>
+                </div>
+                <div class="nav_item">
+                    <a href="#">About Me</a>
+                </div>
+                <div class="nav_item">
+                    <a href="#">Resume</a>
+                </div>
+                <div class="nav_item">
+                    <a href="#">Projects</a>
+                </div>
+                <div class="nav_item">
+                    <a href="#">Contact Me</a>
+                </div>
+                <button class="dark-mood"><i class="bi bi-moon-fill"></i></button>
+            </div>
         </div>
-        <div class="nav_item">
-            <a href="#">Home</a>
-        </div>
-        <div class="nav_item">
-            <a href="#">About Me</a>
-        </div>
-        <div class="nav_item">
-            <a href="#">Resume</a>
-        </div>
-        <div class="nav_item">
-            <a href="#">Projects</a>
-        </div>
-        <div class="nav_item">
-            <a href="#">Contact Me</a>
-        </div>
-        <button><i class="bi bi-moon-fill"></i></button>
     </nav>
-
+    <!-- Home page -->
     <div class="home-container" id="home-page">
         <!-- left side of home page -->
         <div class="home-child-content">
@@ -61,13 +79,13 @@
             <img class="profile-pic" src="./assets/images/jamie1.jpg" alt="my-profile-pic">
         </div>
     </div>
-
+    <!-- About page -->
     <div id="about-page" class="about-container">
-        <!-- left side of about  page-->
+        <!-- left side-->
         <div class="about-child-pic">
             <img class="about-image" src="./assets/images/jamie2.jpg" alt="about-profile-pic">
         </div>
-        <!-- right side of about page -->
+        <!-- right side -->
         <div class="about-child-content">
             <h3 class="about-me-title">About Me </h3>
             <div class="about-me-description">
@@ -98,7 +116,7 @@
             </div>
         </div>
     </div>
-    <!-- resume page -->
+    <!-- Resume page -->
     <div>
         <!-- <h3 id="resume-title" class="resume-title"></h3> -->
         <div id="resume-page" class="resume-container">
