add responsive design

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
             </button>
             <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
                 <div class="nav_item">
-                    <a href="#">Home</a>
+                    <a href="#home-page">Home</a>
                 </div>
                 <div class="nav_item">
-                    <a href="#">About Me</a>
+                    <a href="#about-page">About Me</a>
                 </div>
                 <div class="nav_item">
-                    <a href="#">Resume</a>
+                    <a href="#resume-page">Resume</a>
                 </div>
                 <div class="nav_item">
-                    <a href="#">Projects</a>
+                    <a href="#projects-page">Projects</a>
                 </div>
                 <div class="nav_item">
-                    <a href="#">Contact Me</a>
+                    <a href="#contact-page">Contact Me</a>
                 </div>
                 <button class="dark-mood"><i class="bi bi-moon-fill"></i></button>
             </div>
@@ -70,7 +70,9 @@
             <h4 class="short-description"> I'm a Junior Full Stack Developer with project
                 management skills based in New Jersy.</h4>
             <div>
-                <button class="hire-me">Hire me</button>
+                <a href="#contact-page">
+                    <button class="hire-me">Hire me</button>
+                </a>
                 <button class="download-resume">Download Resume!</button>
             </div>
         </div>
@@ -164,11 +166,11 @@
             <p class="Contact-info-title">Contact Info</p>
             <p class=" contact-info">
                 <i class="bi bi-envelope-fill"></i>
-                jamieahmed273@gmail.com
+                emailexample@gmail.com
             </p>
             <p class="contact-info">
                 <i class="bi bi-telephone-outbound-fill"></i>
-                +1(732)221-0182
+                @1(800)286 361 7844
             </p>
             <a class="contact-info" href="https://goo.gl/maps/1MeUDyYnrnjPxn578">
                 <i class="bi bi-geo-alt-fill"></i>Get Location
