add some javascript staff

--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
     <div>
         <!-- <h3 id="resume-title" class="resume-title"></h3> -->
         <div id="resume-page" class="resume-container">
-            <div class="resume-title-child">
+            <div class="resume-title-child" id="education-id">
                 <h2 id="resume-education-title"></h2>
                 <img class="resume-images" src="./assets/images/eduction.jpg" alt="">
             </div>
-            <div class="resume-title-child">
+            <div class="resume-title-child" id="skill-id">
                 <h2 id="resume-skill-title"></h2>
                 <img class="resume-images" src="./assets/images/skills-logo.png" alt="">
             </div>
-            <div class="resume-title-child">
+            <div class="resume-title-child" id="experince-id">
                 <h2 id="resume-experience-title"></h2>
                 <img class="resume-images" src="./assets/images/experience-logo.jpg" alt="">
             </div>
