add some staff in readMe file

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                 <a href="#contact-page">
                     <button class="hire-me">Hire me</button>
                 </a>
-                <button class="download-resume">Download Resume!</button>
+                <button  download="" class="download-resume">Download Resume!</button>
             </div>
         </div>
         <!-- right side of home page -->
-        <div class="home-child-pic">
+        <div class="home-child-pic" >
             <img class="profile-pic" src="./assets/images/jamie1.jpg" alt="my-profile-pic">
         </div>
     </div>
