readMe file updated

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <!-- left side of home page -->
         <div class="home-child-content">
             <h2 class="my-name">Hi,I'm Jamie Ahmed</h2>
-            <h4 class="short-description"> I'm a Junior Full Stack Developer with project
+            <h4 class="short-description"> I'm a <strong>Full Stack Developer</strong> with project
                 management skills based in New Jersy.</h4>
             <div>
                 <a href="#contact-page">
