--- a/index.html
+++ b/index.html
@@ -73,11 +73,14 @@
                 <a href="#contact-page">
                     <button class="hire-me">Hire me</button>
                 </a>
-                <button  download="" class="download-resume">Download Resume!</button>
+                <a href="./assets/pdf/Resume.pdf" download="jamie-resume">
+                    <button class="download-resume" type="button">Download Resume!</button>
+                </a>
+
             </div>
         </div>
         <!-- right side of home page -->
-        <div class="home-child-pic" >
+        <div class="home-child-pic">
             <img class="profile-pic" src="./assets/images/jamie1.jpg" alt="my-profile-pic">
         </div>
     </div>
