--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
         <div class="about-child-content">
             <h3 class="about-me-title">About Me </h3>
             <div class="about-me-description">
-                <p>Hey, I am Jamie Ahmed, Recent Boot Camp graduate with a passion for developing scalable web
-                    applications and working across the full stack development with project management skills.</p>
+                <p>Hey, I'm Jamie Ahmed, a recent Boot Camp graduate with project management skills passionate about
+                    developing full-stack scalable web applications.</p>
                 <p>I work on both front-end and back-end development processes. I design, develop, and maintain
                     fully-fledged and functioning platforms with databases,</p>
             </div>
             <div class="jamie-blockquote">
                 <blockquote>
-                  <p>ንሰባት ብዘይኻ ትርኢትኻን ቃላትኻን ካልእ ክርእዩን ክሰምዑን ኣይትፍቅደሎም.</p>
-                  <p>ነቶም ብደጋዊ ትርኢትኻ  ጥራይ  ዝፈርዱኻ, ብውሽጣዊ  ትርእትካ ገርካ ፍረዶም.</p>
-                  <p>ብስቃይ ምፍታን ዕጫ እዩ, ኣብ ስቃይ ምንባር ግን ምርጫ እዩ.</p>
+                    <p>ንሰባት ብዘይኻ ትርኢትኻን ቃላትኻን ካልእ ክርእዩን ክሰምዑን ኣይትፍቅደሎም.</p>
+                    <p>ነቶም ብደጋዊ ትርኢትኻ ጥራይ ዝፈርዱኻ, ብውሽጣዊ ትርእትካ ገርካ ፍረዶም.</p>
+                    <p>ብስቃይ ምፍታን ዕጫ እዩ, ኣብ ስቃይ ምንባር ግን ምርጫ እዩ.</p>
                     <span>" Jamie Ahmed "</span>
                 </blockquote>
             </div>
